@@ -1,4 +1,4 @@
-.TH SG_XCOPY "8" "December 2012" "sg3_utils\-1.35" SG3_UTILS
+.TH SG_XCOPY "8" "February 2013" "sg3_utils\-1.36" SG3_UTILS
 .SH NAME
 sg_xcopy \- copy data to and from files and devices using SCSI EXTENDED
 COPY (XCOPY)
@@ -277,7 +277,7 @@ Written by Hannes Reinecke and Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2000\-2012 Hannes Reinecke and Douglas Gilbert
+Copyright \(co 2000\-2013 Hannes Reinecke and Douglas Gilbert
 .br
 This software is distributed under the GPL version 2. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
